[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossuary"
version = "0.1.0"
description = "A SQLite-backed local network asset inventory and cruise scanner for solo bug bounty hunters."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bugsy Hewitt" }]
keywords = ["security", "asset-inventory", "nmap", "cruise-scanner", "bug-bounty", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "nmap-wrapper @ git+https://github.com/bugsyhewitt/nmap-wrapper",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ossuary = "ossuary.cli:main"

[project.urls]
Homepage = "https://github.com/bugsyhewitt/ossuary"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
